--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="heart">
-        <a href="file:///C:/Users/admin/Desktop/html/papa/in.html"><img src="yel.jpeg" alt="heart">Click on this ma thangoo....</a>
+        <a href="file:///C:/Users/admin/Desktop/html/papa/in.html"><img src="yel.jpeg" alt="heart"></a>
     </div>
     
 </body>
