--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="heart">
-        <a href="https://github.com/DEEKSHA240406/Papa/blob/main/in.html"><img src="yel.jpeg" alt="heart"></a>
+        <a href="in.html"><img src="yel.jpeg" alt="heart"></a>
     </div>
     
 </body>
