--- a/in.html
+++ b/in.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="text">
-        <p>I LOVE YOU SO MUCH DA MAMA <br><br>Click the emoji ammu...<a href="https://github.com/DEEKSHA240406/Papa/blob/main/ind.html"><img src="kiss.png" alt="emoji"></a></p>
+        <p>I LOVE YOU SO MUCH DA MAMA <br><br>Click the emoji ammu...<a href="ind.html"><img src="kiss.png" alt="emoji"></a></p>
         
     </div>
 </body>
